[package]
name = "audio-enumeration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.38.0"

features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Multimedia",
  "Win32_System_Com_StructuredStorage",
  "alloc",
  "Win32_System_Com",
  "Win32_Globalization",
  "Win32_UI_Shell_PropertiesSystem"
]